--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -488,7 +488,359 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>brewery_id</th>\n",
+       "      <th>style</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>appearance</th>\n",
+       "      <th>aroma</th>\n",
+       "      <th>palate</th>\n",
+       "      <th>taste</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "      <th>review</th>\n",
+       "      <th>dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Régab</td>\n",
+       "      <td>142544</td>\n",
+       "      <td>Societe des Brasseries du Gabon (SOBRAGA)</td>\n",
+       "      <td>37262</td>\n",
+       "      <td>Euro Pale Lager</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2015-08-20 10:00:00</td>\n",
+       "      <td>nmann08</td>\n",
+       "      <td>nmann08.184925</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>From a bottle, pours a piss yellow color with...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Barelegs Brew</td>\n",
+       "      <td>19590</td>\n",
+       "      <td>Strangford Lough Brewing Company Ltd</td>\n",
+       "      <td>10093</td>\n",
+       "      <td>English Pale Ale</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2009-02-20 11:00:00</td>\n",
+       "      <td>StJamesGate</td>\n",
+       "      <td>stjamesgate.163714</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>Pours pale copper with a thin head that quick...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Barelegs Brew</td>\n",
+       "      <td>19590</td>\n",
+       "      <td>Strangford Lough Brewing Company Ltd</td>\n",
+       "      <td>10093</td>\n",
+       "      <td>English Pale Ale</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2006-03-13 11:00:00</td>\n",
+       "      <td>mdagnew</td>\n",
+       "      <td>mdagnew.19527</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.73</td>\n",
+       "      <td>500ml Bottle bought from The Vintage, Antrim....</td>\n",
+       "      <td>True</td>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Barelegs Brew</td>\n",
+       "      <td>19590</td>\n",
+       "      <td>Strangford Lough Brewing Company Ltd</td>\n",
+       "      <td>10093</td>\n",
+       "      <td>English Pale Ale</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2004-12-01 11:00:00</td>\n",
+       "      <td>helloloser12345</td>\n",
+       "      <td>helloloser12345.10867</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>Serving: 500ml brown bottlePour: Good head wi...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Barelegs Brew</td>\n",
+       "      <td>19590</td>\n",
+       "      <td>Strangford Lough Brewing Company Ltd</td>\n",
+       "      <td>10093</td>\n",
+       "      <td>English Pale Ale</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2004-08-30 10:00:00</td>\n",
+       "      <td>cypressbob</td>\n",
+       "      <td>cypressbob.3708</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>500ml bottlePours with a light, slightly hazy...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9371917</th>\n",
+       "      <td>Svejk Blonde</td>\n",
+       "      <td>220897</td>\n",
+       "      <td>Svejk Beer Garden</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>Pale Lager</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>2014-09-18 10:00:00</td>\n",
+       "      <td>Travlr</td>\n",
+       "      <td>83882</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>Draft at the source. Clear golden color, fluf...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>RB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9371918</th>\n",
+       "      <td>Svejk Blonde</td>\n",
+       "      <td>220897</td>\n",
+       "      <td>Svejk Beer Garden</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>Pale Lager</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>2013-12-01 11:00:00</td>\n",
+       "      <td>TBone</td>\n",
+       "      <td>10233</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>Tap @brewpub, TiraneClear golden color, good ...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>RB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9371919</th>\n",
+       "      <td>Svejk Dark</td>\n",
+       "      <td>220898</td>\n",
+       "      <td>Svejk Beer Garden</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>Dunkel/Tmavý</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>2014-11-04 11:00:00</td>\n",
+       "      <td>Rob_D_UK</td>\n",
+       "      <td>257161</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>In their beer garden after a walking tour aro...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>RB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9371920</th>\n",
+       "      <td>Svejk Dark</td>\n",
+       "      <td>220898</td>\n",
+       "      <td>Svejk Beer Garden</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>Dunkel/Tmavý</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>2014-09-16 10:00:00</td>\n",
+       "      <td>Travlr</td>\n",
+       "      <td>83882</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>Draft at the source. Hazy maroon color, tan h...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>RB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9371921</th>\n",
+       "      <td>Svejk Dark</td>\n",
+       "      <td>220898</td>\n",
+       "      <td>Svejk Beer Garden</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>Dunkel/Tmavý</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>2013-12-01 11:00:00</td>\n",
+       "      <td>TBone</td>\n",
+       "      <td>10233</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>Tap @brewpub, TiraneDark brown color, nice cr...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>RB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9368152 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              beer_name  beer_id                                brewery_name  \\\n",
+       "0                 Régab   142544   Societe des Brasseries du Gabon (SOBRAGA)   \n",
+       "1         Barelegs Brew    19590        Strangford Lough Brewing Company Ltd   \n",
+       "2         Barelegs Brew    19590        Strangford Lough Brewing Company Ltd   \n",
+       "3         Barelegs Brew    19590        Strangford Lough Brewing Company Ltd   \n",
+       "4         Barelegs Brew    19590        Strangford Lough Brewing Company Ltd   \n",
+       "...                 ...      ...                                         ...   \n",
+       "9371917    Svejk Blonde   220897                           Svejk Beer Garden   \n",
+       "9371918    Svejk Blonde   220897                           Svejk Beer Garden   \n",
+       "9371919      Svejk Dark   220898                           Svejk Beer Garden   \n",
+       "9371920      Svejk Dark   220898                           Svejk Beer Garden   \n",
+       "9371921      Svejk Dark   220898                           Svejk Beer Garden   \n",
+       "\n",
+       "         brewery_id              style   abv                 date  \\\n",
+       "0             37262    Euro Pale Lager   4.5  2015-08-20 10:00:00   \n",
+       "1             10093   English Pale Ale   4.5  2009-02-20 11:00:00   \n",
+       "2             10093   English Pale Ale   4.5  2006-03-13 11:00:00   \n",
+       "3             10093   English Pale Ale   4.5  2004-12-01 11:00:00   \n",
+       "4             10093   English Pale Ale   4.5  2004-08-30 10:00:00   \n",
+       "...             ...                ...   ...                  ...   \n",
+       "9371917       17155         Pale Lager   nan  2014-09-18 10:00:00   \n",
+       "9371918       17155         Pale Lager   nan  2013-12-01 11:00:00   \n",
+       "9371919       17155       Dunkel/Tmavý   nan  2014-11-04 11:00:00   \n",
+       "9371920       17155       Dunkel/Tmavý   nan  2014-09-16 10:00:00   \n",
+       "9371921       17155       Dunkel/Tmavý   nan  2013-12-01 11:00:00   \n",
+       "\n",
+       "                user_name                 user_id appearance  aroma palate  \\\n",
+       "0                 nmann08          nmann08.184925       3.25   2.75   3.25   \n",
+       "1             StJamesGate      stjamesgate.163714        3.0    3.5    3.5   \n",
+       "2                 mdagnew           mdagnew.19527        4.0    3.5    3.5   \n",
+       "3         helloloser12345   helloloser12345.10867        4.0    3.5    4.0   \n",
+       "4              cypressbob         cypressbob.3708        4.0    4.0    4.0   \n",
+       "...                   ...                     ...        ...    ...    ...   \n",
+       "9371917            Travlr                   83882          3      6      2   \n",
+       "9371918             TBone                   10233          2      5      2   \n",
+       "9371919          Rob_D_UK                  257161          3      4      2   \n",
+       "9371920            Travlr                   83882          3      5      1   \n",
+       "9371921             TBone                   10233          4      4      2   \n",
+       "\n",
+       "         taste overall  rating  \\\n",
+       "0         2.75     3.0    2.88   \n",
+       "1          4.0     3.5    3.67   \n",
+       "2          4.0     3.5    3.73   \n",
+       "3          4.0     4.5    3.98   \n",
+       "4          4.0     4.0    4.00   \n",
+       "...        ...     ...     ...   \n",
+       "9371917      5      10    2.60   \n",
+       "9371918      6      10    2.50   \n",
+       "9371919      5       9    2.30   \n",
+       "9371920      4       6    1.90   \n",
+       "9371921      4       8    2.20   \n",
+       "\n",
+       "                                                      text review dataset  \n",
+       "0         From a bottle, pours a piss yellow color with...   True      BA  \n",
+       "1         Pours pale copper with a thin head that quick...   True      BA  \n",
+       "2         500ml Bottle bought from The Vintage, Antrim....   True      BA  \n",
+       "3         Serving: 500ml brown bottlePour: Good head wi...   True      BA  \n",
+       "4         500ml bottlePours with a light, slightly hazy...   True      BA  \n",
+       "...                                                    ...    ...     ...  \n",
+       "9371917   Draft at the source. Clear golden color, fluf...   True      RB  \n",
+       "9371918   Tap @brewpub, TiraneClear golden color, good ...   True      RB  \n",
+       "9371919   In their beer garden after a walking tour aro...   True      RB  \n",
+       "9371920   Draft at the source. Hazy maroon color, tan h...   True      RB  \n",
+       "9371921   Tap @brewpub, TiraneDark brown color, nice cr...   True      RB  \n",
+       "\n",
+       "[9368152 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# merge the two dfs and only keep the rows that are present in ratings_style but not in gf_ratings (delete all gf rows from ratings_style)\n",
     "merged_ratings = pd.merge(ratings_style, gf_ratings, indicator=True, how='outer')\n",
@@ -505,16 +857,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4810208"
+       "3423303"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,16 +877,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4557944, 17)"
+       "(5944849, 18)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,6 +922,16 @@
    "source": [
     "with open(os.path.join(DATA_DIR, \"reviews_style.pkl\"), 'rb') as f:\n",
     "    reviews_style = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(DATA_DIR, \"BA_reviews_style.pkl\"), 'rb') as f:\n",
+    "    BA_reviews_style = pickle.load(f)"
    ]
   },
   {
@@ -694,6 +1056,11 @@
    "source": [
     "import cupy #GPU support        (dont use if not using the gpu)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4127,6 +4494,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It showed that the ammount of reviews for gluten-free beers is increasing over time. Does it reflect the increasing popularity? Or it is simply because of the increase of total number of reviews in the dataset? To answer that, the temporal evolution of all reviews was computed and applied for normalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <span style=\"color: green;\">This plot clearly shows that the ammount of reviews for gluten-free beers is increasing.</span>\n",
     "### <span style=\"color: blue;\">However, seasoned detectives like us must always stay vigilant: is the reason for this increase because of the increase of the popularity of the site? Or is it because of the increase of total number of reviews in the dataset?</span>"
    ]
@@ -4234,6 +4608,13 @@
     "plt.xlabel('Year')\n",
     "plt.ylabel('Proportion of glutenfree reviews')\n",
     "plt.title('Temporal analysis of glutenfree beers proportion worldwide')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It shows that the increase of reviews for gluten-free beers is not due to the increase of total number of reviews. Thus, the increasing popularity of gluten-free beers is confirmed."
    ]
   },
   {
